--- a/index.css
+++ b/index.css
@@ -169,3 +169,34 @@ body {
   background-color: #2d333b;
   cursor: pointer;
 }
+
+.footer {
+  
+  outline: 1px solid rgb(68, 68, 68);
+  border-radius: 15px;
+  font-family: 'light';
+  font-size: 15px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  height: 65px;
+  width: 100%;
+  background-color: #212427;
+  align-items: center;
+  justify-content: center;
+  
+  margin-top: 10px;
+}
+.footer img {
+  width: 18px;
+
+}
+
+.footer strong {
+  outline: 1px solid rgb(116, 245, 137);
+  border-radius: 5px;
+  padding: 5px;
+  margin: 2px;
+  color: black;
+  background-color: #7df864;
+}
