--- a/index.css
+++ b/index.css
@@ -19,7 +19,10 @@ html {
   background-color: #212427;
   color: #35df68;
 }
-
+.tooltip-inf {
+  font-size: 12px;
+  font-family: 'light';
+}
 body {
   box-sizing: border-box;
   margin: 0;
