--- a/index.css
+++ b/index.css
@@ -353,3 +353,14 @@ span {
   opacity: 1;
   transition-duration: 0.5;
 }
+.share-link {
+  display: flex;
+  justify-content: center;
+}
+.share img {
+  width: 35%;
+}
+.share:hover {
+  opacity: 0.7;
+  cursor:pointer;
+}
