--- a/index.css
+++ b/index.css
@@ -334,6 +334,50 @@ span {
   padding: 10px;
 }
 
+button {
+  background-color: #2d333b;
+  border-radius: 15px;
+  outline: none;
+  color: white;
+  font-size: 12px;
+  font-family: 'heavy';
+  padding: 10px;
+  border: none;  
+  outline: 1px solid rgb(68, 68, 68);
+  opacity: 0.7;
+
+  
+  transition-duration: 0.5;
+}
+button:hover {
+  opacity: 1;
+  transition-duration: 0.5;
+  cursor: pointer;
+}
+.lrgbtn { 
+  padding: 15px;
+}
+.schd-button {
+  margin-bottom: 5px;
+  border: 0 solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 1px solid;
+  outline-color: rgba(255, 255, 255, .5);
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+} 
+
+.schd-button:hover {
+  
+  margin-bottom: 5px;
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
+  text-shadow: 1px 1px 2px #427388; 
+}
+
 .candidate-merit button {
   background-color: #2d333b;
   border-radius: 15px;
