--- a/index.css
+++ b/index.css
@@ -11,6 +11,9 @@ html {
   src: url("light.ttf");
 }
 
+.consentstatusstyle {
+  color: rgb(116, 245, 137);
+}
 
 .logo:hover {
   filter: drop-shadow(0px 0px 7px #107e47);
