--- a/index.css
+++ b/index.css
@@ -10,6 +10,78 @@ html {
   font-family: "light";
   src: url("light.ttf");
 }
+.hide {
+  display: none !important;
+}
+
+.consent-pref-switch {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;  
+  text-align: center;
+  font-family: 'light';
+  place-items: center;
+  padding: 0px;
+}
+/* The switch - the container */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 40px;
+}
+
+/* Hide the default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2d333b;
+  transition: .4s;
+  border-radius: 34px;
+}
+
+/* The slider before checked */
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  top: 2px;
+  left: 4px;
+  bottom: 4px;
+  background-color: #4a4c4d;
+  transition: .4s;
+  border-radius: 85%;
+}
+
+/* When the checkbox is checked */
+input:checked + .slider {
+  background-color: #40c040;
+}
+
+/* Move the slider when checked */
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 
 .consentstatusstyle {
   color: rgb(116, 245, 137);
