--- a/index.css
+++ b/index.css
@@ -75,8 +75,70 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
+.helper-text {
+  font-family: 'light';
+  font-size: 15px;
+  color: #adff2f;
+  filter: drop-shadow(0px 0px 7px #3fb681);
+  opacity: 1;
+  
+}
 
+.helper-icon {
+  width: 35px;
+}
 
+.merit-helper:hover .helper-icon {
+  animation: pulse 1s 1;
+}
+
+@keyframes pulse {
+  0% {
+      -webkit-transform: scale(1.2);
+      
+      opacity: 0.4;
+  }
+
+  25% {
+      -webkit-transform: scale(1.4);
+      transform: rotate(45deg);
+      opacity: 0.8;
+  }
+
+  50% {
+      -webkit-transform: scale(1.6);
+      
+      opacity: 1.2;
+  }
+
+  75% {
+      -webkit-transform: scale(1.8);
+      transform: rotate(-45deg);
+      opacity: 0.8;
+    }
+
+  100% {
+      -webkit-transform: scale(2);
+      transform: rotate(0);
+      opacity: 0.4;
+  }
+} 
+
+.merit-helper {
+  display: inline-flex;
+  border-radius: 15px;
+  background-color: #22272e;
+  border: 1px solid #5e5f62;
+  padding: 12px;
+  opacity: 0.45;
+  justify-content: center;
+  transition-duration: 0.5s;
+}
+.merit-helper:hover {
+  filter: drop-shadow(0px 0px 7px #545a57);
+  opacity: 1;
+  transition-duration: 0.5s;
+}
 .consentstatusstyle {
   color: rgb(116, 245, 137);
 }
