--- a/index.css
+++ b/index.css
@@ -579,3 +579,112 @@ button:hover {
   text-shadow: 1px 1px 2.5px #3a3a3a;
   font-size: medium;
 }
+
+#HCB_comment_box {
+  background-color: #282829;
+  border-radius: 15px;
+  outline: none;
+  color: white !important;
+  font-size: 12px;
+  font-family: 'light';
+  padding: 10px;
+  border: none;  
+  outline: 1px solid rgb(68, 68, 68);
+  opacity: 0.7;
+  width: 100%;
+  transition-duration: 0.5;
+}
+#HCB_comment_box textarea {
+  background-color: rgba(255, 255, 255, .2) !important;
+  border-radius: 15px !important;
+  border: 1px solid rgba(255, 255, 255, 0) !important;
+  color: aliceblue !important;
+}
+#HCB_comment_box textarea:focus {
+  background-color: rgba(255, 255, 255, .2) !important;
+  border-radius: 15px !important;
+  border: 1px solid rgba(58, 58, 58, 0) !important;
+  
+}
+#HCB_comment_box input {
+  background-color: rgba(255, 255, 255, .2) !important;
+  border-radius: 15px !important;
+  border: 1px solid rgba(58, 58, 58, 0) !important;
+  color: aliceblue !important;
+  
+}
+#HCB_comment_box .hcb-comment-tb button   { 
+  background-color: #1f1f20 !important; 
+  border-radius: 15px !important;
+  outline: none !important;
+  color: white !important;
+  font-size: 12px !important;
+  font-family: 'heavy' !important;
+  padding: 10px !important;
+  border: none !important;  
+  outline: 1px solid rgb(68, 68, 68) !important;
+  opacity: 0.7 !important;
+  
+  transition-duration: 0.5 !important;
+}
+#HCB_comment_box  button:hover { 
+  margin-bottom: 5px !important;
+  border: 1px solid !important;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2) !important;
+  outline-color: rgba(255, 255, 255, 0) !important;
+  outline-offset: 15px !important;
+  text-shadow: 1px 1px 2px #427388 !important; 
+}
+
+#HCB_comment_box .comment {
+  background-color: #363535 !important;
+  border-radius: 15px !important;
+  border: 1px solid #5e5f62 !important;
+  padding: 15px !important;
+}
+
+#HCB_comment_box .submit   { 
+  background-color: #1f1f20 !important; 
+  border-radius: 15px !important;
+  outline: none !important;
+  color: white !important;
+  font-size: 12px !important;
+  font-family: 'heavy' !important;
+  padding: 10px !important;
+  border: none !important;  
+  outline: 1px solid rgb(68, 68, 68) !important;
+  opacity: 0.7 !important;
+  
+  transition-duration: 0.5 !important;
+}
+#HCB_comment_box  .submit:hover { 
+  margin-bottom: 5px !important;
+  border: 1px solid !important;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2) !important;
+  outline-color: rgba(255, 255, 255, 0) !important;
+  outline-offset: 15px !important;
+  text-shadow: 1px 1px 2px #427388 !important; 
+}
+
+#HCB_comment_box .btn   { 
+  background-color: #1f1f20 !important; 
+  border-radius: 15px !important;
+  outline: none !important;
+  color: white !important;
+  font-size: 12px !important;
+  font-family: 'heavy' !important;
+  padding: 10px !important;
+  border: none !important;  
+  outline: 1px solid rgb(68, 68, 68) !important;
+  opacity: 0.7 !important;
+  
+  transition-duration: 0.5 !important;
+}
+#HCB_comment_box  .btn:hover { 
+  margin-bottom: 5px !important;
+  border: 1px solid !important;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2) !important;
+  outline-color: rgba(255, 255, 255, 0) !important;
+  outline-offset: 15px !important;
+  text-shadow: 1px 1px 2px #427388 !important; 
+}
