--- a/index.css
+++ b/index.css
@@ -688,3 +688,23 @@ button:hover {
   outline-offset: 15px !important;
   text-shadow: 1px 1px 2px #427388 !important; 
 }
+
+.seats {
+  font-family: 'light';
+  color: aliceblue;
+  font-size: 25px;
+  padding: 10px;
+  border: 1px solid rgb(68, 68, 68);
+  border-radius: 25px;
+
+  
+  transition-duration : 1s;
+}
+.seats span strong {
+  opacity: 1;
+}
+
+.seats:hover {
+  filter: drop-shadow(0px 0px 2px #5bcf5b);
+  transition-duration : 1s;
+}
