--- a/index.css
+++ b/index.css
@@ -333,6 +333,36 @@ a:hover {
   opacity: 0.7;
   transition-duration: ease 0.5s;
 }
+.alert {
+  width: 512px;
+  padding: 16px;
+  margin: 8px;
+  max-width: 90%;
+  background-color: #292c31;
+  color: aliceblue;
+  border-radius: 25px;
+  padding: 20px;
+  opacity: 1;
+  outline: 1px solid  rgba(255, 255, 255, .5);
+  box-shadow: inset 0 0 20px rgba(87, 185, 42, 0);
+  transition-duration: 0.6s;
+}
+.alert:hover {
+  outline-color: rgba(255, 255, 255, 0);
+  filter : drop-shadow(0px 0px 15px #bdc7c2);
+  transition-duration: 0.6s;
+}
+.alert-title {
+  font-family: 'heavy';
+  font-size: 20px;
+  opacity: 1 !important;
+}
+.alert-content {
+  font-family: 'light';
+  font-size: 15px;
+
+}
+
 
 .stat-table {
   background-color: #2d333b;
@@ -462,6 +492,10 @@ span {
 }
 #houseJobMarks {
   background-color: rgb(66, 101, 197);
+  border-radius: 15px;  
+}
+#hardAreaMarks {
+  background-color: rgb(66, 182, 197);
   border-radius: 15px;  
 }
 .legend {
