--- a/index.css
+++ b/index.css
@@ -88,7 +88,12 @@ input:checked + .slider:before {
   opacity: 1;
   
 }
-
+#headline {
+  font-family: 'light';
+  font-size: 20px;
+  color: rgb(240, 232, 232);
+  text-shadow: 1px 1px 2px #427388; 
+}
 .helper-icon {
   width: 35px;
 }
