--- a/index.css
+++ b/index.css
@@ -595,7 +595,26 @@ button:hover {
   text-shadow: none;
   transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
 } 
-
+.simple-text {
+  color : aliceblue;
+  font-family: 'light';
+  font-size: medium;
+}
+.unofficial {
+  box-shadow: inset 0 0 20px rgba(182, 47, 47, 0.801) !important;
+  outline: 1px solid !important;
+  
+  outline-offset: 0px;
+  text-shadow: none;
+  outline-color: rgba(184, 99, 99, 0.5) !important;
+}
+.unofficial:hover { 
+  box-shadow: inset 0 0 20px rgba(252, 175, 175, 0.5), 0 0 20px rgba(165, 80, 80, 0.2);
+  outline-color: rgba(253, 1, 1, 0) !important;
+  outline-offset: 15px;
+  
+  text-shadow: 1px 1px 2px #c46858 !important; 
+}
 .schd-button:hover {
   
   margin-bottom: 5px;
